[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/player/temp_guy.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Ray_DownLeft" type="RayCast2D" parent="."]
position = Vector2( -32, 32 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="Ray_DownRight" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2

[node name="Ray_ForwardTop" type="RayCast2D" parent="."]
position = Vector2( 32, -32 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="Ray_ForwardBottom" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2
